fix(ng-calculator): improve scrollbar UX and summary icons

--- a/packages/ng-calculator/src/app/calculator/calculator.component.scss
+++ b/packages/ng-calculator/src/app/calculator/calculator.component.scss
@@ -34,6 +34,7 @@ mat-card-header {
 }
 
 .summary mat-list-item {
+  overflow: hidden;
   flex: 50% 0 0;
 }
 
