--- a/packages/ng-calculator/src/styles/_general.scss
+++ b/packages/ng-calculator/src/styles/_general.scss
@@ -8,6 +8,7 @@ body {
   font-family: Roboto, "Helvetica Neue Light", "Helvetica Neue", Helvetica,
     Arial, "Lucida Grande", sans-serif;
   margin: 0;
+  border-top: 1px solid white;
 }
 
 h1,
